# eSambo-selenium

./: .gitignore  TestConfig.xlsx  pyproject.toml
ScannerFiles/: order_file.txt  order_scanner.txt
pages/: loginLogoutPage.py  loginPage.py  raportPage.py
pages/franchiseStorePages/: homePage.py  ordersPage.py  warehouseManagementPage.py
tests/: configTest.py  test_login.py  test_loginLogout.py
tests/franchiseStore/: test_NavigationMenu.py  test_orders.py
tests/franchiseStore/orders/: test_ordersMenu.py  test_ordersPrepareAndSend.py  test_ordersRaports.py
tests/franchiseStore/warehouseManagement/: test_delivery.py
