[tool.poetry]
name = "eSambo Selenium"
version = "0.1.0"
description = ""
authors = ["BB"]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.4.0"
pytest = "^7.1.2"
autopep8 = "^1.7.0"
flake8 = "^5.0.4"
webdriver-manager = "^3.8.3"
openpyxl = "^3.0.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
